--- a/app/views/layouts/backoffice_shared/_navigation.html.erb
+++ b/app/views/layouts/backoffice_shared/_navigation.html.erb
@@ -44,14 +44,21 @@
         </li>
         <li>
             <%= link_to backoffice_categories_path do %>
-                <i class="fa fa-th-list fa-fw"></i> Categorias
+                <i class="fa fa-th-list fa-fw"></i> Categories
             <% end %>
         </li>
         <li>
             <%= link_to backoffice_admins_path do %>
-                <i class="fa fa-users fa-fw"></i> Administradores
+                <i class="fa fa-users fa-fw"></i> Admins
             <% end %>
         </li>
+        <% if Rails.env.development? %>
+            <li>
+                <%= link_to backoffice_diagrams_path do %>
+                    <i class="fa fa-database fa-fw"></i> ER Diagram
+                <% end %>
+            </li>
+        <% end %>
     </ul>
 </div>
 <!-- /.sidebar-collapse -->
