Add comment controller

--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -71,6 +71,8 @@
 
         <%= javascript_include_tag 'application' %>
         <%= javascript_include_tag 'site' %>
+
+        <%= render partial: 'layouts/shared/notifications'  %>
     </body>
 
 </html>
