--- a/app/views/site/ad_detail/_show.html.erb
+++ b/app/views/site/ad_detail/_show.html.erb
@@ -23,53 +23,24 @@
 
 <div class="well">
 
-    <div class="text-right">
-        <a class="btn btn-success">Leave a Review</a>
-    </div>
+    <% if member_signed_in? %>
+      <div class="text-right">
+          <button type="button" class="btn btn-success" data-toggle="modal" data-target="#commentModal">
+            Deixe um comentário
+          </button>
+      </div>
+    <% else %>
+      <div class="text-right">
+          <button type="button" class="btn btn-success" disabled="disabled", data-toggle="modal" data-target="#commentModal">
+            Efetue login para comentar
+          </button>
+      </div>
+    <% end %>
 
     <hr>
 
-    <div class="row">
-        <div class="col-md-12">
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star-empty"></span>
-            Anonymous
-            <span class="pull-right">10 days ago</span>
-            <p>This product was great in terms of quality. I would definitely buy another!</p>
-        </div>
-    </div>
-
-    <hr>
-
-    <div class="row">
-        <div class="col-md-12">
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star-empty"></span>
-            Anonymous
-            <span class="pull-right">12 days ago</span>
-            <p>I've alredy ordered another one!</p>
-        </div>
-    </div>
-
-    <hr>
-
-    <div class="row">
-        <div class="col-md-12">
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star-empty"></span>
-            Anonymous
-            <span class="pull-right">15 days ago</span>
-            <p>I've seen some better than this, but not at this price. I definitely recommend this item.</p>
-        </div>
-    </div>
+    <%= render partial: 'site/ad_detail/comments' %>
 
 </div>
+
+<%= render partial: 'site/ad_detail/comment_modal' %>
