--- a/app/views/layouts/site_shared/_footer.html.erb
+++ b/app/views/layouts/site_shared/_footer.html.erb
@@ -6,7 +6,7 @@
     <footer>
         <div class="row">
             <div class="col-lg-12">
-                <p>Copyright &copy; <%= t('app.name') %> <%= Date.today.year %></p>
+                <p>Copyright &copy; <%= t('app_name') %> <%= Date.today.year %></p>
             </div>
         </div>
     </footer>
