--- a/app/views/site/ad_detail/_show.html.erb
+++ b/app/views/site/ad_detail/_show.html.erb
@@ -9,14 +9,8 @@
     </div>
 
     <div class="ratings">
-        <p class="pull-right">3 reviews</p>
         <p>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star"></span>
-            <span class="glyphicon glyphicon-star-empty"></span>
-            4.0 stars
+            <%= rating_for @ad, 'quality' %>
         </p>
     </div>
 </div>
@@ -26,14 +20,12 @@
     <% if member_signed_in? %>
       <div class="text-right">
           <button type="button" class="btn btn-success" data-toggle="modal" data-target="#commentModal">
-            Deixe um comentário
+            Leave a review
           </button>
       </div>
     <% else %>
       <div class="text-right">
-          <button type="button" class="btn btn-success" disabled="disabled", data-toggle="modal" data-target="#commentModal">
-            Efetue login para comentar
-          </button>
+          <%= link_to 'Log in to comment', new_member_session_path, class:"btn btn-success" %>
       </div>
     <% end %>
 
