--- a/app/views/site/shared/_ads.html.erb
+++ b/app/views/site/shared/_ads.html.erb
@@ -2,21 +2,16 @@
     <div class="col-sm-4 col-lg-4 col-md-4">
         <div class="thumbnail">
             <%= image_tag ad.picture.url(:medium) %>
-            <div class="caption">
+            <div class="caption" style="height: 100px;">
                 <h4 class="pull-right"><%= humanized_money_with_symbol ad.price %></h4>
                 <h4>
                     <%= link_to truncate(ad.title, length: 20), site_ad_detail_path(ad), remote: true, data: {push: :partial} %>
                 </h4>
                 <p><%= truncate(ad.description_short, length: 100) %></p>
             </div>
-            <div class="ratings">
-                <p class="pull-right">15 reviews</p>
+            <div class="ratings" style="padding: 5px;">
                 <p>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
+                    <%= rating_for ad, 'quality' %>
                 </p>
             </div>
         </div>
