--- a/app/views/site/profile/ads/index.html.erb
+++ b/app/views/site/profile/ads/index.html.erb
@@ -4,10 +4,10 @@
   <thead>
     <tr>
       <th>#</th>
-      <th>Image</th>
-      <th>Title</th>
-      <th>Category</th>
-      <th>Price</th>
+      <th><%= @ads.model.human_attribute_name('image') %></th>
+      <th><%= @ads.model.human_attribute_name('title') %></th>
+      <th><%= @ads.model.human_attribute_name('category') %></th>
+      <th><%= @ads.model.human_attribute_name('price') %></th>
       <th></th>
     </tr>
   </thead>
