--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="<%= I18n.locale %>">
+
 <head>
-  <title><%= t('app_name') %></title>
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title><%= yield(:title) %></title>
+
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
+
   <%= csrf_meta_tags %>
+
 </head>
+
 <body>
 
-<%= yield %>
+  <%= yield %>
 
 </body>
+
 </html>
