--- a/app/views/layouts/backoffice_devise.html.erb
+++ b/app/views/layouts/backoffice_devise.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="<%= I18n.locale %>">
 
 <head>
 
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Backoffice</title>
+    <title><%= yield :title %></title>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= stylesheet_link_tag    'backoffice', media: 'all' %>
