--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="<%= I18n.locale %>">
 
 <head>
 
@@ -23,57 +23,57 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
 
-    </head>
+</head>
 
-    <body>
-        <div id="global-spin" class="loading" style="display: none;">Loading&#8230;</div>
-        <%= render partial: "layouts/site_shared/navigation" %>
+<body>
+    <div id="global-spin" class="loading" style="display: none;">Loading&#8230;</div>
+    <%= render partial: "layouts/site_shared/navigation" %>
 
-        <!-- Page Content -->
-        <div class="container">
+    <!-- Page Content -->
+    <div class="container">
 
-            <%= form_tag(site_search_path, method: :get) do %>
-                <div class="row well well-sm">
-                    <div class="col-lg-3"></div>
-                    <div class="col-lg-6">
-                        <div class="input-group">
-                            <%= text_field_tag(:q, params[:q], {class:"form-control", placeholder:"Search for..."}) %>
-                            <span class="input-group-btn">
-                                <%= submit_tag("Search", class:"btn btn-default") %>
-                            </span>
-                        </div><!-- /input-group -->
-                    </div><!-- /.col-lg-6 -->
-                </div>
-            <% end %>
+        <%= form_tag(site_search_path, method: :get) do %>
+            <div class="row well well-sm">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6">
+                    <div class="input-group">
+                        <%= text_field_tag(:q, params[:q], {class:"form-control", placeholder:"Search for..."}) %>
+                        <span class="input-group-btn">
+                            <%= submit_tag("Search", class:"btn btn-default") %>
+                        </span>
+                    </div><!-- /input-group -->
+                </div><!-- /.col-lg-6 -->
+            </div>
+        <% end %>
 
-            <div class="row">
+        <div class="row">
 
-                <%= render partial: 'layouts/site_shared/sidebar' %>
+            <%= render partial: 'layouts/site_shared/sidebar' %>
 
-                <div id="home-detail" class="col-md-9">
+            <div id="home-detail" class="col-md-9">
 
-                    <% if controller_path == 'site/home' %>
-                        <%= render partial: 'layouts/site_shared/carousel' %>
-                    <% end %>
+                <% if controller_path == 'site/home' %>
+                    <%= render partial: 'layouts/site_shared/carousel' %>
+                <% end %>
 
-                    <div class="row">
-                        <%= yield %>
-                    </div>
-
+                <div class="row">
+                    <%= yield %>
                 </div>
 
             </div>
 
         </div>
-        <!-- /.container -->
 
-        <%= render partial: "layouts/site_shared/footer" %>
+    </div>
+    <!-- /.container -->
 
-        <%= javascript_include_tag 'application' %>
-        <%= javascript_include_tag 'site' %>
+    <%= render partial: "layouts/site_shared/footer" %>
 
-        <%= render partial: 'layouts/shared/notifications'  %>
-    </body>
+    <%= javascript_include_tag 'application' %>
+    <%= javascript_include_tag 'site' %>
+
+    <%= render partial: 'layouts/shared/notifications'  %>
+</body>
 
 </html>
 
