--- a/app/views/site/profile/ads/shared/_form.html.erb
+++ b/app/views/site/profile/ads/shared/_form.html.erb
@@ -21,7 +21,7 @@
     <div class="col-xs-6">
       <div class="form-group">
         <%= f.label :title %>
-        <%= f.text_field :title, class: "form-control", placeholder: "Título" %>
+        <%= f.text_field :title, class: "form-control", placeholder: "Title" %>
       </div>
     </div>
   </div>
@@ -41,7 +41,7 @@
         <%= f.label :price %>
         <div class="input-group">
           <div class="input-group-addon"><%= @ad.price.currency.symbol %></div>
-            <%= f.text_field :price, class: "form-control", placeholder: "Título" %>
+            <%= f.text_field :price, class: "form-control", placeholder: "Title" %>
         </div>
       </div>
     </div>
@@ -51,7 +51,8 @@
     <div class="col-xs-3">
       <div class="form-group">
         <%= f.label :finish_date %>
-        <%= f.text_field :finish_date, class: "form-control datepicker", value: (l(@ad.finish_date) unless @ad.finish_date.blank?) %>
+        <%= f.text_field :finish_date, class: "form-control datepicker",
+                         value: (l(@ad.finish_date) unless @ad.finish_date.blank?) %>
       </div>
     </div>
   </div>
